# 47-hvdc-tower-sim

./: CMakeLists.txt  README.md
cmake/: FindPETSc.cmake
examples/: CMakeLists.txt  example_iced_conductor.cpp  example_typhoon_fsi.cpp  example_uhv_tower.cpp
include/common/: GhostExchange.hpp  Logger.hpp  MPIManager.hpp  MathUtils.hpp  PETScManager.hpp  SparseMatrix.hpp  Timer.hpp  Types.hpp  Vector.hpp
include/fem/: ArcLengthSolver.hpp  Assembler.hpp  BeamElementNL.hpp  ConductorElement.hpp  Element.hpp  FEModel.hpp  Material.hpp  Node.hpp  ParallelAssembler.hpp  Section.hpp  Solver.hpp  TrussElementNL.hpp
include/fsi/: AerodynamicLoads.hpp  CouplingManager.hpp  InterfaceMapper.hpp  LoadTransfer.hpp
include/fvm/: BoundaryCondition.hpp  Cell.hpp  Discretization.hpp  Face.hpp  Field.hpp  FluidSolver.hpp  Grid.hpp  NSComposable.hpp  ParallelExchange.hpp
src/: main.cpp
src/common/: GhostExchange.cpp  Logger.cpp  MPIManager.cpp  MathUtils.cpp  PETScManager.cpp  SparseMatrix.cpp  Timer.cpp  Types.cpp
src/fem/: ArcLengthSolver.cpp  Assembler.cpp  BeamElementNL.cpp  ConductorElement.cpp  Element.cpp  FEModel.cpp  Material.cpp  Node.cpp  ParallelAssembler.cpp  Section.cpp  Solver.cpp  TrussElementNL.cpp
src/fsi/: AerodynamicLoads.cpp  CouplingManager.cpp  InterfaceMapper.cpp  LoadTransfer.cpp
src/fvm/: BoundaryCondition.cpp  Cell.cpp  Discretization.cpp  Face.cpp  Field.cpp  FluidSolver.cpp  Grid.cpp  NSComposable.cpp  ParallelExchange.cpp
tests/: CMakeLists.txt
